updated search button to make visible and fixed gray box on main page to not eat page

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,15 +60,27 @@ body {
       color: #86ac41;
   }
 
+  .footer {
+      z-index: 1;
+  }
+
   .header ,
   .footer {
     box-shadow: 0px 0px 8px 2px #000000;
   }
 
+  /* Home button */
+  
+  #nav-mobile {
+      background-color: #86ac41;
+      height: 100px;
+      padding-top: 17px;
+  }
+
   /* Logo */
 
   .logo {
-      width: 12%;
+      width: 190px;
   }
 
   /* Search section */
@@ -113,21 +125,21 @@ body {
   .input input[type=text]{
     color: white;
     border-bottom: 1px solid white;
-    box-shadow: 0 1px 0 0 #000;
+    text-align: left;
   }
 
   #label {
       color: white;
   }
   
-  .validate {
+  /* .validate {
     border-bottom: 1px solid white;
     box-shadow: 0 1px 0 0 #000;
-  }
+  } */
 
-input.active {
+/* input.active {
       border-bottom: #fff;
-  }
+  } */
 
 .input:focus {
     color: #fff;
